# Key-Value-Server

./: .gitignore
CS695/Assignment_2/: CMakeLists.txt  Makefile  Readme.md  VM.cpp  helper.cpp  main.cpp  manager.cpp  manager.h  vm.cpp  vm.h
CS695/Assignment_2/VMManager/: CMakeLists.txt  Graph.cpp  Graph.h  Manager.cpp  Manager.h  VM.cpp  VM.h  VmManager.cpp  VmManager.h  main.cpp
CS695/Assignment_2/app/: VmManager.cpp  VmManager.h  graph.h  main  main.cpp
CS695/Assignment_2/build-client/: CMakeCache.txt  Client  Makefile  cmake_install.cmake  out3.csv
CS695/Assignment_2/build-debug/client/: Client
CS695/Assignment_2/build-debug/manager/: cmake_install.cmake
CS695/Assignment_2/build-debug/server/: CMakeCache.txt
CS695/Assignment_2/build-manager/: CMakeCache.txt  Makefile  Manager  VM_Manager  cmake_install.cmake
CS695/Assignment_2/build-release/client/: CMakeCache.txt  Makefile  cmake_install.cmake
CS695/Assignment_2/build-release/manager/: CMakeCache.txt  Makefile  Manager  cmake_install.cmake
CS695/Assignment_2/build-release/server/: CMakeCache.txt  (+3 more)
CS695/Assignment_2/build-server/: Makefile  Server  cmake_install.cmake
CS695/Assignment_2/client/: CMakeLists.txt  Client  Client.cpp  Client_old.cpp  KVClientLibrary.cpp
CS695/Assignment_2/manager/: Manager.cpp  Manager.h  VM.cpp  VM.h
CS695/Assignment_2/server/: CMakeLists.txt  KVCache.cpp  KVClientHandler.cpp  KVStore.cpp  Server.cpp  ThreadPool.cpp
CS695/Assignment_2/testcases/: testcase_generator.py
CS695/Assignment_2/vm_manager/: Makefile  main.cpp  manager.cpp  manager.h  vm.cpp  vm.h
(+229 files in other folders)
